--- a/src/main/resources/fxmlparser/fxml.fxml
+++ b/src/main/resources/fxmlparser/fxml.fxml
@@ -5,14 +5,15 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.layout.VBox?>
 
-<VBox xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.Controller">
-   <children>
-      <Label text="test" />
-       <fx:include source="../view/MainView.fxml" />
-      <fx:include source="pickers.fxml" />
-      <fx:include source="toolbar.fxml" />
-      <fx:include source="../view/MainView.fxml" />
-  
-      <!-- <fx:include source="../../../../../../java/sudoku_mvvm/src/main/resources/view/MainView.fxml" /> -->
-   </children>
+<VBox xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1"
+	fx:controller="controller.Controller">
+	<children>
+		<Label text="test" />
+		<fx:include source="../view/MainView.fxml" />
+		<fx:include source="pickers.fxml" />
+		<fx:include source="toolbar.fxml" />
+		<fx:include source="../view/MainView.fxml" />
+		<fx:include
+			source="../../../../../../java/sudoku_mvvm/src/main/resources/view/MainView.fxml" />
+	</children>
 </VBox>
