--- a/src/main/resources/fxmlparser/views/views.fxml
+++ b/src/main/resources/fxmlparser/views/views.fxml
@@ -14,5 +14,6 @@
         </columns>
       </TableView>
       <TreeView prefHeight="200.0" prefWidth="200.0" />
+      <fx:include source="../../view/MainView.fxml" />
    </children>
 </FlowPane>
