--- a/src/test/resources/fxmlparser/pickers.fxml
+++ b/src/test/resources/fxmlparser/pickers.fxml
@@ -4,10 +4,13 @@
 <?import java.lang.*?>
 <?import javafx.scene.layout.*?>
 
-<HBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
-   <children>
-      <ColorPicker />
-      <DatePicker />
-      <fx:include source="toolbar.fxml" />
-   </children>
+<HBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity"
+	minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0"
+	xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1"
+	 fx:controller="not.a.Controller">
+	<children>
+		<ColorPicker />
+		<DatePicker />
+		<fx:include source="toolbar.fxml" />
+	</children>
 </HBox>
