Updated some values

--- a/src/test/resources/fxmls/toolbar.fxml
+++ b/src/test/resources/fxmls/toolbar.fxml
@@ -4,7 +4,7 @@
 <?import javafx.scene.control.*?>
 
 <ToolBar prefHeight="40.0" prefWidth="200.0" xmlns:fx="http://javafx.com/fxml/1"
-	xmlns="http://javafx.com/javafx/8"  fx:controller="test.Controller">
+	xmlns="http://javafx.com/javafx/8"  fx:controller="toolbar.Controller">
 	<items>
 		<Button mnemonicParsing="false" text="Button" />
 		<TextField />
