--- a/src/test/resources/fxmls/origin.fxml
+++ b/src/test/resources/fxmls/origin.fxml
@@ -5,7 +5,7 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.layout.VBox?>
 
-<VBox xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.Controller">
+<VBox xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="origin.Controller">
 	<children>
 		<Label text="test" />
 		<fx:include source="pickers.fxml" />
