--- a/src/test/resources/fxmls/pickers.fxml
+++ b/src/test/resources/fxmls/pickers.fxml
@@ -7,7 +7,7 @@
 <HBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity"
 	minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0"
 	xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1"
-	 fx:controller="not.a.Controller">
+	 fx:controller="pickers.Controller">
 	<children>
 		<ColorPicker />
 		<DatePicker />
